# Science-gym

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  README.md  definitions.py  experiments.sh  experiments_basketball.sh  experiments_drop_friction.sh  experiments_langrange.sh  experiments_plane.sh  experiments_sirv.sh  genindex.html  hall_of_fame_2025-03-27_144014.730.csv  hall_of_fame_2025-03-27_145200.310.csv  index.html  main.py  main_record_episodes.py  modules.html  objects.inv  output.csv  py-modindex.html  pyproject.toml  quick_test.py  requirements.txt  requirements_linux.txt  requirements_macos.txt  sciencegym.agents.StableBaselinesAgents.A2CAgent.html  sciencegym.agents.StableBaselinesAgents.AgentInterface.html  sciencegym.agents.StableBaselinesAgents.CustomAgent.html  sciencegym.agents.StableBaselinesAgents.HERAgent.html  sciencegym.agents.StableBaselinesAgents.PPOAgent.html  sciencegym.agents.StableBaselinesAgents.SACAgent.html  sciencegym.agents.StableBaselinesAgents.StableBaselinesAgent.html  sciencegym.agents.StableBaselinesAgents.html  sciencegym.agents.TrackingCallback.html  sciencegym.agents.html  sciencegym.equation.html  sciencegym.html  sciencegym.problems.Problem_Basketball.html  (+32 more)
_sources/: modules.rst.txt  sciencegym.agents.StableBaselinesAgents.A2CAgent.rst.txt  sciencegym.agents.StableBaselinesAgents.AgentInterface.rst.txt  sciencegym.agents.StableBaselinesAgents.CustomAgent.rst.txt  sciencegym.agents.StableBaselinesAgents.HERAgent.rst.txt  sciencegym.agents.StableBaselinesAgents.PPOAgent.rst.txt  sciencegym.agents.rst.txt  (+35 more)
(+131 files in other folders)
